# autofocus

./: .gitignore  DEPLOY.md  QUICKSTART.md  README.md  STRUCTURE.md  env.example  package.json  requirements.txt
api/: index.py
backend/: app.py  models.py  openai_service.py  pyproject.toml
extension/: background.js  content-nudge.js  focus-wall.html  focus-wall.js  manifest.json
extension/popup/: popup.html  popup.js
